#+TITLE: Changelog
#+OPTIONS: H:10
#+OPTIONS: num:nil
#+OPTIONS: toc:2

* Unreleased

** Added

- new development files
  - =Cask=
  - =CHANGELOG.org=
  - =.travis.yml=
- new dependency: =dash (2.17.0)=

** Changed

- =emaps-describe-keymap= and =emaps-describe-keymap-bindings=
  will now default the prompt to the current major mode map if
  the symbol at point is not a keymap symbol
- package now uses lexical binding

* 0.1.0 - 2018-07-12

** Added

- new commands
  - =emaps-define-key=
  - =emaps-describe-keymap=
  - =emaps-describe-keymap-bindings=
  - =emaps-keymap-for-mode=
- new custom group: =emaps=
- new font face: =emaps-key-face=